--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             "url": "https://kanu-schönebeck.de"
         }
     </script>
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/Inter.css">
-    <link rel="stylesheet" href="/assets/css/Libre%20Baskerville.css">
-    <link rel="stylesheet" href="/assets/css/bss-overrides.css">
-    <link rel="stylesheet" href="/assets/css/baguetteBox.min.css">
-    <link rel="stylesheet" href="/assets/css/navbar-logo.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/Inter.css">
+    <link rel="stylesheet" href="./assets/css/Libre%20Baskerville.css">
+    <link rel="stylesheet" href="./assets/css/bss-overrides.css">
+    <link rel="stylesheet" href="./assets/css/baguetteBox.min.css">
+    <link rel="stylesheet" href="./assets/css/navbar-logo.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top bg-body shadow-sm py-md-3">
-        <div class="container"><a class="navbar-brand" href="#"><img src="./assets/img/1755811060126.jpg" style="height: 5px; width: 5px;" alt="Logo">
+        <div class="container"><a class="navbar-brand" href="#"><img src="./assets/img/1755811060126.jpg" class="navbar-logo" alt="Logo">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                     <path d="M3 12l3 3l3 -3l-3 -3z"></path>
                     <path d="M15 12l3 3l3 -3l-3 -3z"></path>
